nginx-pod-headless.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-headless
  labels:
    app: nginx-pod-headless
spec:
  hostname: nginx-pod-headless
  subdomain: nginx-pod-headless-service
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
