ubuntu-ds.yaml
# Example 23
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ubuntu-ds
  labels:
    app: ubuntu-ds
spec:
  selector:
    matchLabels:
      app: ubuntu-ds
  template:
    metadata:
      labels:
        app: ubuntu-ds
    spec:
      containers:
      - image: ubuntu
        name: ubuntu-ds
        stdin: true
        tty: true
