nginx-pod-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pod-headless-service
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-pod-headless
