nginx-rs-dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dns-service
spec:
  externalIPs: none
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-dns-pod
