nginx-rs-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-service
spec:
  type: NodePort
  ports:
  - name: http
    nodePort: 32080 # Listening port on Nodes
    port: 81 # Listening port on ClusterIP
    targetPort: 80 # Pod’s listening port
    protocol: TCP
  selector:
    app: nginx-rs-pod
