nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: devopnet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-dns
          servicePort: 80
